RESOLVED FIXED73864
REGRESSION: Full keyboard access doesn't work if enabled before Safari started
https://bugs.webkit.org/show_bug.cgi?id=73864
Summary REGRESSION: Full keyboard access doesn't work if enabled before Safari started
Alexey Proskuryakov
Reported 2011-12-05 14:08:43 PST
Full keyboard access doesn't work if enabled before Safari started.
Attachments
proposed fix (1.31 KB, patch)
2011-12-05 14:10 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2011-12-05 14:10:28 PST
Created attachment 117937 [details] proposed fix
Alexey Proskuryakov
Comment 2 2011-12-05 14:10:55 PST
Alexey Proskuryakov
Comment 3 2011-12-05 14:17:05 PST
Note You need to log in before you can comment on or make changes to this bug.