        REGRESSION: Full keyboard access doesn't work if enabled before Safari started         https://bugs.webkit.org/show_bug.cgi?id=73864

Reviewed by Darin Adler.

        * WebProcess/WebProcess.cpp: (WebKit::WebProcess::initializeWebProcess): Actually use the
        parameter passed at process creation.



Canonical link: https://commits.webkit.org/90501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102046 268f45cc-cd09-0410-ab3c-d52691b4dbfc